# BooleanFuncMinimizer

./: CMakeLists.txt
scripts/: constants.py  display_sequence.txt  script.py  utility.py
src/: BooleanMinimizer.cpp  BooleanMinimizer.h  main.cpp
src/strategies/: MinimizationStrategy.h  QuineMcCluskeyStrategy.cpp  QuineMcCluskeyStrategy.h
